Fix API Docs title

--- a/web/coinsim/api/templates/drf_openapi/index.html
+++ b/web/coinsim/api/templates/drf_openapi/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>DRF OpenAPI Schema</title>
+    <title>Coinsim REST API</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
     <style>
         body {
             margin: 0;
