--- a/web/coinsim/frontend/src/src/app/views/dashboard/dashboard.component.html
+++ b/web/coinsim/frontend/src/src/app/views/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="animated fadeIn">
   <div class="container p-3 bg-white">
-    <h1>Welcome back User</h1>
+    <h1>Welcome back {{username}}</h1>
   </div>
 </div>
