--- a/web/coinsim/frontend/src/src/app/views/pages/login.component.html
+++ b/web/coinsim/frontend/src/src/app/views/pages/login.component.html
@@ -5,21 +5,21 @@
         <div class="card-group">
           <div class="card p-4">
             <div class="card-body">
-              <h1>Login</h1>
-              <p class="text-muted">Sign In to your account</p>
-              <div class="input-group mb-3">
-                <span class="input-group-addon"><i class="icon-user"></i></span>
-                <input type="text" class="form-control" placeholder="Username">
-              </div>
-              <div class="input-group mb-4">
-                <span class="input-group-addon"><i class="icon-lock"></i></span>
-                <input type="password" class="form-control" placeholder="Password">
-              </div>
-              <div class="row">
-                <div class="col-8">
-                  <button type="button" class="btn btn-primary px-4" (click)="checkLogin()">Login</button>
+                <h1>Login</h1>
+                <p class="text-muted">Sign In to your account</p>
+                <div class="input-group mb-3">
+                  <span class="input-group-addon"><i class="icon-user"></i></span>
+                  <input type="text" class="form-control" placeholder="Username" (input)="onUsernameChange($event.target.value)">
                 </div>
-                <!-- <div class="col-6 text-left">
+                <div class="input-group mb-4">
+                  <span class="input-group-addon"><i class="icon-lock"></i></span>
+                  <input type="password" class="form-control" placeholder="Password" (input)="onPasswordChange($event.target.value)">
+                </div>
+                <div class="row">
+                  <div class="col-8">
+                    <button type="button" class="btn btn-primary px-4" (click)="checkLogin()">Login</button>
+                  </div>
+                  <!-- <div class="col-6 text-left">
                   <button type="button" class="btn btn-link px-4">Forgot password?</button>
                 </div> -->
               </div>
@@ -28,7 +28,7 @@
           <div class="card text-white bg-dark py-5 d-md-down-8">
             <div class="card-body text-center">
               <div>
-                <img src="../../../assets/img/logowhite.png"width="40%" alt="coinsimlogo" style="margin-bottom:1.5rem;">
+                <img src="../../../assets/img/logowhite.png" width="40%" alt="coinsimlogo" style="margin-bottom:1.5rem;">
                 <p><i class="fa fa-btc" aria-hidden="true"></i> Experiment with cryptocurrency trading</p>
                 <p><i class="fa fa-users" aria-hidden="true"></i> Compete with your friends</p>
                 <p><strong class="text-success"> Riskless and free</strong></p>
