--- a/web/coinsim/frontend/src/src/app/views/pages/login.component.html
+++ b/web/coinsim/frontend/src/src/app/views/pages/login.component.html
@@ -5,24 +5,30 @@
         <div class="card-group">
           <div class="card p-4">
             <div class="card-body">
+              <form (submit)="checkLogin()">
                 <h1>Login</h1>
                 <p class="text-muted">Sign In to your account</p>
                 <div class="input-group mb-3">
                   <span class="input-group-addon"><i class="icon-user"></i></span>
-                  <input type="text" class="form-control" placeholder="Username" (input)="onUsernameChange($event.target.value)">
+                  <input required type="text" class="form-control" placeholder="Username" (input)="onUsernameChange($event.target.value)">
                 </div>
                 <div class="input-group mb-4">
                   <span class="input-group-addon"><i class="icon-lock"></i></span>
-                  <input type="password" class="form-control" placeholder="Password" (input)="onPasswordChange($event.target.value)">
+                  <input required type="password" class="form-control" placeholder="Password" (input)="onPasswordChange($event.target.value)">
                 </div>
+                
                 <div class="row">
                   <div class="col-8">
-                    <button type="button" class="btn btn-primary px-4" (click)="checkLogin()">Login</button>
+                    <button type="submit" class="btn btn-primary px-4">Login</button>
+                  </div>
+                  <div class="col-8 text-red">
+                      <small id="badrequestHint" style="color:#DF5A49;display:none;">Username or Password incorrect</small>
                   </div>
                   <!-- <div class="col-6 text-left">
                   <button type="button" class="btn btn-link px-4">Forgot password?</button>
                 </div> -->
-              </div>
+                </div>
+              </form>
             </div>
           </div>
           <div class="card text-white bg-dark py-5 d-md-down-8">
