--- a/web/coinsim/frontend/src/src/app/views/pages/register.component.html
+++ b/web/coinsim/frontend/src/src/app/views/pages/register.component.html
@@ -6,27 +6,33 @@
           <div class="card-body p-4">
             <h1>Nice to meet you {{usernameValue}} :)</h1>
             <p class="text-muted">Create your account</p>
-            <form (submit)="checkRegister()">
+            <form (submit)="checkRegister(); $event.preventDefault()">
             <div class="input-group mb-3">
               <span class="input-group-addon"><i class="icon-user"></i></span>
               <input autofocus required type="text" class="form-control" (input)="onUsernameChange($event.target.value)" placeholder="Username">
+              <div class="invalid-feedback">
+                  Excuse us, Username is already taken.
+              </div>
             </div>
 
             
             <div class="input-group mb-3">
               <span class="input-group-addon"><i class="icon-lock"></i></span>
-              <input required type="password" class="form-control" placeholder="Password" (input)="onPassword1Change($event.target.value)">
+              <input required type="password" class="form-control" placeholder="Password" pattern=".{6,}" title="Password must be at least 6 Characters" (input)="onPassword1Change($event.target.value)">
             </div>
             
             <div class="input-group mb-4">
               <span class="input-group-addon"><i class="icon-lock"></i></span>
-              <input required type="password" class="form-control" placeholder="Repeat password" (input)="onPassword2Change($event.target.value)">
+              <input id="password" type="password" class="form-control" placeholder="Repeat password" (input)="onPassword2Change($event.target.value)">
             </div>
             
             <small id="emailHelp" class="form-text text-muted">Email is optional</small>
             <div class="input-group mb-3">
               <span class="input-group-addon">@</span>
               <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Email" (input)="onEmailChange($event.target.value)">
+              <div class="invalid-feedback">
+                  Please provide a valid email.
+                </div>
             </div>
             
             <button type="submit" class="btn btn-block btn-success">Create Account</button>
