--- a/web/coinsim/frontend/src/src/app/views/wallet/wallet.component.html
+++ b/web/coinsim/frontend/src/src/app/views/wallet/wallet.component.html
@@ -60,7 +60,7 @@
     <div class="container-fluid mb-3 p-2 bg-white">
       <div class="row">
         <div class="col-md-12">
-          <app-linechart></app-linechart>
+          <app-balance-history></app-balance-history>
         </div>
       </div>
     </div>
