--- a/web/coinsim/frontend/src/src/app/views/market/market.component.html
+++ b/web/coinsim/frontend/src/src/app/views/market/market.component.html
@@ -1,10 +1,10 @@
 <div class="animated fadeIn">
-  <div class="container p-3 bg-white">
-    <table class="table table-hover">
+  <div class="container p-3 bg-white table-responsive">
+    <table class="table table-hover market-table">
       <thead class="thead">
         <tr>
           <th>Name</th>
-          <th>Market Cap</th>
+          <th data-sortable="true">Market Cap</th>
           <th>Price</th>
           <th>Volume (24h)</th>
           <th>Circulating Supply</th>
@@ -15,12 +15,12 @@
       <tbody>
         <tr *ngFor="let currency of marketModel">
           <td>{{currency.NAME}}</td>
-            <td>{{currency.USD.MKTCAP}}</td>
-            <td>{{currency.USD.PRICE}}</td>
-            <td>{{currency.USD.VOLUME24HOUR}}</td>
-            <td>{{currency.USD.SUPPLY}}</td>
-            <td>{{currency.USD.CHANGEPCT24HOUR}} %</td>
-            <td>Pricegraph<td>
+          <td>{{currency.USD.MKTCAP | number}} $</td>
+          <td>{{currency.USD.PRICE | number}} $</td>
+          <td>{{currency.USD.VOLUME24HOUR | number}} $</td>
+          <td>{{currency.USD.SUPPLY | number}} $</td>
+          <td class={{currency.USD.CLASS}}>{{currency.USD.CHANGEPCT24HOUR | number : '1.2-2'}} %</td>
+          <td>Pricegraph<td>
         </tr>
       </tbody>
     </table>
