started trading templating

--- a/web/coinsim/frontend/src/src/app/views/trading/trading.component.html
+++ b/web/coinsim/frontend/src/src/app/views/trading/trading.component.html
@@ -1,7 +1,82 @@
 <div class="animated fadeIn">
-    <div class="container p-3 bg-white">
-      <p>
-        trading works!
-      </p>
+  <div class="container p-3 bg-white">
+    <div class="row">
+      <div class="col">
+        <h5>Wallet</h5>
+        <ul class="wallet-list">
+          <li class="wallet-item">
+            <img src="assets/img/crypto-icons/btc.png" alt="btc-icon">
+            <div>
+              <span class="title">Botcoins</span>
+              <span class="sum">100</span>
+            </div>
+          </li>
+          <li class="wallet-item">
+            <img src="assets/img/crypto-icons/btc.png" alt="btc-icon">
+            <div>
+              <span class="title">Botcoins</span>
+              <span class="sum">100</span>
+            </div>
+          </li>
+          <li class="wallet-item">
+            <img src="assets/img/crypto-icons/btc.png" alt="btc-icon">
+            <div>
+              <span class="title">Botcoins</span>
+              <span class="sum">100</span>
+            </div>
+          </li>
+          <li class="wallet-item">
+            <img src="assets/img/crypto-icons/btc.png" alt="btc-icon">
+            <div>
+              <span class="title">Botcoins</span>
+              <span class="sum">100</span>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div class="col-6">
+        <h4>Trading Area</h4>
+        <div class="trading-area">
+            <ul class="wallet-trading-list">
+                <li class="trading-item">
+                  <div class="container-name">
+                      <img src="assets/img/crypto-icons/btc.png" alt="btc-icon">
+                      <span class="title">BTC</span>
+                      <div class="container-slider">
+                         slider
+                      </div>
+                  </div>
+                  <div class="container-input">
+                    <input type="number" step="0.001">
+                  </div>
+                </li>
+              </ul>
+              <ul class="bank-trading-list">
+
+                  <li class="trading-item">
+                    
+                      <div class="container-input">
+                          <input type="number" step="0.001">
+                        </div>  
+                    <div class="container-name">
+                      <span class="title">BTC</span>
+                      <img style="float:right;" src="assets/img/crypto-icons/btc.png" alt="btc-icon">
+                          <div class="slider-container">
+                             slider
+                          </div>
+                      </div>
+                    </li>
+              </ul>
+        </div>
+      </div>
+      <div class="col">
+        <h5>Bank</h5>
+        <ul class="bank-list">
+          <li class="bank-item"></li>
+          <li class="bank-item"></li>
+          <li class="bank-item"></li>
+        </ul>
+      </div>
     </div>
   </div>
+</div>
