--- a/web/coinsim/frontend/src/src/app/views/wallet/wallet.component.html
+++ b/web/coinsim/frontend/src/src/app/views/wallet/wallet.component.html
@@ -5,57 +5,7 @@
       <div class="container-fluid bg-light" style="height:200px;"></div>
     </div>
 
-    <div class="container mb-3 p-2 bg-white">
-      <div class="row p-0 m-0">
-        <div class="col-md-6 p-1 bg-white">
-          <div class="table-responsive">
-            <table class="table table-hover">
-              <thead class="thead">
-                <tr>
-                  <th>Currency</th>
-                  <th>Amount</th>
-                  <th>Value in US Dollar</th>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>ETH</td>
-                  <td>0.0006</td>
-                  <td>15 US Dollar</td>
-                </tr>
-                <tr>
-                  <td>ETH</td>
-                  <td>0.0006</td>
-                  <td>15 US Dollar</td>
-                </tr>
-                <tr>
-                  <td>ETH</td>
-                  <td>0.0006</td>
-                  <td>15 US Dollar</td>
-                </tr>
-                <tr>
-                  <td>ETH</td>
-                  <td>0.0006</td>
-                  <td>15 US Dollar</td>
-                </tr>
-                <tr>
-                  <td>ETH</td>
-                  <td>0.0006</td>
-                  <td>15 US Dollar</td>
-                </tr>
-                <tr>
-                  <td>ETH</td>
-                  <td>0.0006</td>
-                  <td>15 US Dollar</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-        <div class="col-md-6 p-1 bg-white">
-          <app-piechart></app-piechart>
-        </div>
-      </div>
-    </div>
+   <app-wallet-composition></app-wallet-composition>
 
     <div class="container-fluid mb-3 p-2 bg-white">
       <div class="row">
