--- a/web/coinsim/frontend/src/src/app/views/history/history-table/history-table.component.html
+++ b/web/coinsim/frontend/src/src/app/views/history/history-table/history-table.component.html
@@ -1,120 +1,22 @@
-      <div class="table-responsive">
-      <table class="table table-hover">
-        <thead class="thead">
-          <tr>
-            <th>Time</th>
-            <th>Date</th>
-            <th>Sold</th>
-            <th>Baught</th>
-            <th>Exchangerate</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>8:00</td>
-            <td>27.11.2017</td>
-            <td>15 US Dollar</td>
-            <td>0,001515 Bitcoin</td>
-            <td>1 USD =  0,000101 BTC</td>
-          </tr>
-          <tr>
-            <td>7:56</td>
-            <td>28.11.2017</td>
-            <td>6000 US Dollar</td>
-            <td>11,83 Etherum</td>
-            <td>1 USD = 0.0020008 ETH</td>
-          </tr>
-          <tr>
-            <td>10:11</td>
-            <td>27.11.2017</td>
-            <td>0,00100000 Bitcoin</td>
-            <td>0.11018883 Lightcoin</td>
-            <td>1 Bitcoin = 110.1888306 LTC</td>
-          </tr>
-          <tr>
-            <td>8:00</td>
-            <td>27.11.2017</td>
-            <td>15 US Dollar</td>
-            <td>0,001515 Bitcoin</td>
-            <td>1 USD =  0,000101 BTC</td>
-          </tr>
-          <tr>
-            <td>7:56</td>
-            <td>28.11.2017</td>
-            <td>6000 US Dollar</td>
-            <td>11,83 Etherum</td>
-            <td>1 USD = 0.0020008 ETH</td>
-          </tr>
-          <tr>
-            <td>10:11</td>
-            <td>27.11.2017</td>
-            <td>0,00100000 Bitcoin</td>
-            <td>0.11018883 Lightcoin</td>
-            <td>1 Bitcoin = 110.1888306 LTC</td>
-          </tr>
-          <tr>
-            <td>8:00</td>
-            <td>27.11.2017</td>
-            <td>15 US Dollar</td>
-            <td>0,001515 Bitcoin</td>
-            <td>1 USD =  0,000101 BTC</td>
-          </tr>
-          <tr>
-            <td>7:56</td>
-            <td>28.11.2017</td>
-            <td>6000 US Dollar</td>
-            <td>11,83 Etherum</td>
-            <td>1 USD = 0.0020008 ETH</td>
-          </tr>
-          <tr>
-            <td>10:11</td>
-            <td>27.11.2017</td>
-            <td>0,00100000 Bitcoin</td>
-            <td>0.11018883 Lightcoin</td>
-            <td>1 Bitcoin = 110.1888306 LTC</td>
-          </tr>
-          <tr>
-            <td>8:00</td>
-            <td>27.11.2017</td>
-            <td>15 US Dollar</td>
-            <td>0,001515 Bitcoin</td>
-            <td>1 USD =  0,000101 BTC</td>
-          </tr>
-          <tr>
-            <td>7:56</td>
-            <td>28.11.2017</td>
-            <td>6000 US Dollar</td>
-            <td>11,83 Etherum</td>
-            <td>1 USD = 0.0020008 ETH</td>
-          </tr>
-          <tr>
-            <td>10:11</td>
-            <td>27.11.2017</td>
-            <td>0,00100000 Bitcoin</td>
-            <td>0.11018883 Lightcoin</td>
-            <td>1 Bitcoin = 110.1888306 LTC</td>
-          </tr>
-          <tr>
-            <td>8:00</td>
-            <td>27.11.2017</td>
-            <td>15 US Dollar</td>
-            <td>0,001515 Bitcoin</td>
-            <td>1 USD =  0,000101 BTC</td>
-          </tr>
-          <tr>
-            <td>7:56</td>
-            <td>28.11.2017</td>
-            <td>6000 US Dollar</td>
-            <td>11,83 Etherum</td>
-            <td>1 USD = 0.0020008 ETH</td>
-          </tr>
-          <tr>
-            <td>10:11</td>
-            <td>27.11.2017</td>
-            <td>0,00100000 Bitcoin</td>
-            <td>0.11018883 Lightcoin</td>
-            <td>1 Bitcoin = 110.1888306 LTC</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+<div class="table-responsive">
+	<table class="table table-hover">
+	  <thead class="thead">
+	    <tr>
+	      <th>Time</th>
+	      <th>Date</th>
+	      <th>Sold</th>
+	      <th>Bought</th>
+	      <th>Exchange rate</th>
+	    </tr>
+	  </thead>
+	  <tbody>
+	    <tr *ngFor="let transaction of transactions | async | reverse">
+		  <td>{{transaction.timestamp.toLocaleTimeString()}}</td>
+		  <td>{{transaction.timestamp.toLocaleDateString()}}</td>
+	      <td>{{transaction.soldAmount | number : '1.2-8'}} {{transaction.soldCurrency}}</td>
+	      <td>{{transaction.boughtAmount | number : '1.2-8'}} {{transaction.boughtCurrency}}</td>
+	      <td>1 {{transaction.soldCurrency}} = {{transaction.getExchangeRate() | number : '1.2-8'}} {{transaction.boughtCurrency}}</td>
+	    </tr>
+	  </tbody>
+</table>
+</div>
