add unfinished history chart

--- a/web/coinsim/frontend/src/src/app/views/history/history.component.html
+++ b/web/coinsim/frontend/src/src/app/views/history/history.component.html
@@ -1,4 +1,7 @@
 <div class="animated fadeIn">
+	<div class="container mb-3 p-3 bg-white">
+		<app-market-price></app-market-price>
+	</div>
     <div class="container p-3 bg-white">
 		<app-history-table></app-history-table>
     </div>
