--- a/web/coinsim/frontend/src/src/app/views/trading/trading.component.html
+++ b/web/coinsim/frontend/src/src/app/views/trading/trading.component.html
@@ -4,78 +4,148 @@
       <div class="col">
         <h5>Wallet</h5>
         <ul class="wallet-list">
-          <li class="wallet-item">
+          <li class="wallet-item" (click)="createSellObject($event.target)">
             <img src="assets/img/crypto-icons/btc.png" alt="btc-icon">
             <div>
               <span class="title">Botcoins</span>
-              <span class="sum">100</span>
-            </div>
-          </li>
-          <li class="wallet-item">
-            <img src="assets/img/crypto-icons/btc.png" alt="btc-icon">
-            <div>
-              <span class="title">Botcoins</span>
-              <span class="sum">100</span>
-            </div>
-          </li>
-          <li class="wallet-item">
-            <img src="assets/img/crypto-icons/btc.png" alt="btc-icon">
-            <div>
-              <span class="title">Botcoins</span>
-              <span class="sum">100</span>
-            </div>
-          </li>
-          <li class="wallet-item">
-            <img src="assets/img/crypto-icons/btc.png" alt="btc-icon">
-            <div>
-              <span class="title">Botcoins</span>
-              <span class="sum">100</span>
+              <span class="sum">0.0004</span>
             </div>
           </li>
         </ul>
       </div>
-      <div class="col-6">
+      <div class="col-7">
         <h4>Trading Area</h4>
         <div class="trading-area">
-            <ul class="wallet-trading-list">
-                <li class="trading-item">
+          <ul class="wallet-trading-list">
+            <li *ngFor="let item of tradingModel.sell" class="trading-item">
+              <div class="container-name">
+                  <img src="assets/img/crypto-icons/{{item.SHORT | lowercase}}.png" alt="btc-icon">
+                  <input id="{{item.SHORT}}WalletInput" (keyup)="onInputChange($event, item, 'Wallet')" type="number" min="0" max="{{item.BALANCE}}" step="0.001" value="{{item.BALANCE}}">
+                  <span class="title">{{item.SHORT}}</span>
+                </div>
+              <div class="container-slider">
+                  <ion-range-slider id="{{item.SHORT}}WalletSlider"
+                  type="single"
+                  step="0.0001"
+                  min="0"
+                  max="{{item.BALANCE}}"
+                  from="{{item.BALANCE}}"
+                  (onChange)="updateSlider($event.from, item.SHORT, 'Wallet')"
+                  ></ion-range-slider>
+              </div>
+              </li>
+          </ul>
+          <div class="trading-icon-container"><span>
+              <i class="fa fa-exchange" aria-hidden="true"></i>
+          </span></div>
+          <ul class="bank-trading-list">
+              <li *ngFor="let item of tradingModel.buy" class="trading-item">
                   <div class="container-name">
-                      <img src="assets/img/crypto-icons/btc.png" alt="btc-icon">
-                      <span class="title">BTC</span>
-                      <div class="container-slider">
-                         slider
-                      </div>
+                    <span class="title">{{item.SHORT}}</span>
+                    <input id="{{item.SHORT}}BankInput" (keyup)="onInputChange($event, item, 'Bank')" type="number" min="0" max="{{item.BALANCE}}" step="0.001" value="{{item.BALANCE}}">
+                    <img src="assets/img/crypto-icons/{{item.SHORT | lowercase}}.png" alt="btc-icon">
+                    </div>
+                  <div class="container-slider">
+                      <!-- <ion-range-slider id="{{item.SHORT}}BankSlider"
+                      type="single"
+                      step="0.0001"
+                      min="0"
+                      max="{{item.BALANCE}}"
+                      from="{{item.BALANCE}}"
+                      (onChange)="updateSlider($event.from, item.SHORT, 'Bank')"
+                      ></ion-range-slider> -->
                   </div>
-                  <div class="container-input">
-                    <input type="number" step="0.001">
-                  </div>
-                </li>
-              </ul>
-              <ul class="bank-trading-list">
-
-                  <li class="trading-item">
-                    
-                      <div class="container-input">
-                          <input type="number" step="0.001">
-                        </div>  
-                    <div class="container-name">
-                      <span class="title">BTC</span>
-                      <img style="float:right;" src="assets/img/crypto-icons/btc.png" alt="btc-icon">
-                          <div class="slider-container">
-                             slider
-                          </div>
-                      </div>
-                    </li>
-              </ul>
+          </ul>
         </div>
       </div>
       <div class="col">
         <h5>Bank</h5>
         <ul class="bank-list">
-          <li class="bank-item"></li>
-          <li class="bank-item"></li>
-          <li class="bank-item"></li>
+          <li class="bank-item" (click)="createBuyObject($event.target)">
+              <img src="assets/img/crypto-icons/eth.png" alt="btc-icon">
+              <div>
+                <span class="title">Botcoins</span>
+              </div>
+            </li>
+            <li class="bank-item" (click)="createBuyObject($event)">
+                <img src="assets/img/crypto-icons/eth.png" alt="btc-icon">
+                <div>
+                  <span class="title">Botcoins</span>
+                </div>
+              </li>
+              <li class="bank-item" (click)="createBuyObject($event)">
+                  <img src="assets/img/crypto-icons/eth.png" alt="btc-icon">
+                  <div>
+                    <span class="title">Botcoins</span>
+                  </div>
+                </li>
+                <li class="bank-item" (click)="createBuyObject($event)">
+                    <img src="assets/img/crypto-icons/eth.png" alt="btc-icon">
+                    <div>
+                      <span class="title">Botcoins</span>
+                    </div>
+                  </li>
+                  <li class="bank-item" (click)="createBuyObject($event)">
+                      <img src="assets/img/crypto-icons/eth.png" alt="btc-icon">
+                      <div>
+                        <span class="title">Botcoins</span>
+                      </div>
+                    </li>
+                    <li class="bank-item" (click)="createBuyObject($event)">
+                        <img src="assets/img/crypto-icons/eth.png" alt="btc-icon">
+                        <div>
+                          <span class="title">Botcoins</span>
+                        </div>
+                      </li>
+                      <li class="bank-item" (click)="createBuyObject($event)">
+                          <img src="assets/img/crypto-icons/eth.png" alt="btc-icon">
+                          <div>
+                            <span class="title">Botcoins</span>
+                          </div>
+                        </li>
+                        <li class="bank-item" (click)="createBuyObject($event)">
+                            <img src="assets/img/crypto-icons/eth.png" alt="btc-icon">
+                            <div>
+                              <span class="title">Botcoins</span>
+                            </div>
+                          </li>
+                          <li class="bank-item" (click)="createBuyObject($event)">
+                              <img src="assets/img/crypto-icons/eth.png" alt="btc-icon">
+                              <div>
+                                <span class="title">Botcoins</span>
+                              </div>
+                            </li>
+                            <li class="bank-item" (click)="createBuyObject($event)">
+                                <img src="assets/img/crypto-icons/eth.png" alt="btc-icon">
+                                <div>
+                                  <span class="title">Botcoins</span>
+                                </div>
+                              </li>
+                              <li class="bank-item" (click)="createBuyObject($event)">
+                                  <img src="assets/img/crypto-icons/eth.png" alt="btc-icon">
+                                  <div>
+                                    <span class="title">Botcoins</span>
+                                  </div>
+                                </li>
+                                <li class="bank-item" (click)="createBuyObject($event)">
+                                    <img src="assets/img/crypto-icons/eth.png" alt="btc-icon">
+                                    <div>
+                                      <span class="title">Botcoins</span>
+                                    </div>
+                                  </li>
+                                  <li class="bank-item" (click)="createBuyObject($event)">
+                                      <img src="assets/img/crypto-icons/eth.png" alt="btc-icon">
+                                      <div>
+                                        <span class="title">Botcoins</span>
+                                      </div>
+                                    </li>
         </ul>
+      </div>
+    </div>
+    <div class="row justify-content-md-center">
+      <div class="col-auto">
+        <button type="button" class="btn btn-light btn-lg" (click)="reset()">Reset</button>
+        <button type="button" class="btn btn-success btn-lg">Buy</button>
       </div>
     </div>
   </div>
