--- a/web/coinsim/frontend/src/src/app/views/trading/trading.component.scss
+++ b/web/coinsim/frontend/src/src/app/views/trading/trading.component.scss
@@ -6,15 +6,26 @@
 {
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  padding: 0 0.5rem;
+  overflow: auto;
 }
 
-.wallet-item {
+h4,
+h5 {
+  width: 100%;
+  text-align: center;
+  font-weight: 500;
+}
+
+.wallet-item,
+.bank-item {
   padding: 0.5rem;
-  border-radius: 5px;
+  margin: .3rem 0.1rem;
+  border-radius: 3px;
   display: flex;
   align-items: center;
-  
+  justify-content: center;
+  box-shadow: 0 1px #FFFFFF inset, 0 1px 3px rgba(34, 25, 25, 0.4);  
   img {
     width: 22px;
     margin: 0.2rem;
@@ -23,7 +34,6 @@
   div {
     .title {
       font-size: 1rem;
-      font-weight: 700;
       padding-left: 5px;
     }
   
@@ -52,41 +62,46 @@
     width: 45%;
     padding: 0.2rem;
   }
+
+  .trading-icon-container {
+    display: flex;
+    align-items: center;
+    padding: 1rem 0;
+  }
 }
 
 .trading-item {
   border-radius: 5px;
   padding: 0.25rem;
-  display: flex;
-  flex-direction: row;
   
   .container-name {
-    width: 60%;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: row;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1rem 0 1rem;
+    
     img {
-      width: 15px;
-      margin: 0.2rem
+      width: 22px;
     }
 
-    .title {
-      font-weight: 700;
-    }
-  }
-
-  .container-input {
-    width: 40%;
     input {
-      width: 100%;
-      height: 100%;
+      border: 0;
+      text-align: center;
+      font-size: 20px;
+      color: #3e515b;
+      width: auto;
+    }
+    
+    .title {
+      font-size: 20px;
     }
   }
 
   .container-slider {
-    background-color: #f0f3f5;
     width: 100%;
-  }
-
-  &:hover {
-    background-color: #f0f3f5;
-    cursor: pointer;
+    padding: .5rem 1rem 0 1rem;
   }
 }
