--- a/web/coinsim/frontend/src/src/app/views/market-detail/detail.component.html
+++ b/web/coinsim/frontend/src/src/app/views/market-detail/detail.component.html
@@ -2,11 +2,18 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-6">
+
+
         <div class="clearfix">
           <h1 class="float-left display-3 mr-4">{{currency}}</h1>
           <h4 class="pt-3">Market Detail</h4>
           <p class="text-muted">Market Detail</p>
         </div>
+
+        <!--div class="container-fluid mb-3 p-2 bg-white">
+                  <app-cryptodaychart *ngIf="currency" [currencies]="[BTC]"></app-cryptodaychart>
+                </div-->
+                
       </div>
     </div>
   </div>
