--- a/web/coinsim/frontend/src/src/app/views/market/market.component.scss
+++ b/web/coinsim/frontend/src/src/app/views/market/market.component.scss
@@ -2,6 +2,8 @@ table.market-table {
   tr th {
     border-top: 0;
       text-align: right;
+      color: #595151;
+      font-weight: 600;
 
       &:nth-child(1) {
         text-align: left;
@@ -12,14 +14,25 @@ table.market-table {
     text-align: right;
     font-size: 1rem;
     cursor: pointer;
+    color: #655c5c;
     
     &:nth-child(1) {
-      font-weight: 700;
+      font-weight: 500;
       text-align: left;
       font-size: 1rem;
+      color: #463f3f;
       img {
         width: 22px;
         margin-right: 12px;
+      }
+      p {
+        margin-bottom: -4px;
+      }
+      span {
+        font-size: 0.75rem;
+        font-weight: 500;
+        margin-left: 35px;
+        color: #b3adad;
       }
     }
 
