--- a/web/coinsim/frontend/src/src/app/views/trading/trading.component.scss
+++ b/web/coinsim/frontend/src/src/app/views/trading/trading.component.scss
@@ -55,8 +55,10 @@ h5 {
     cursor: pointer;
   }
 
-  &:active {
-    background:#a4b7c1;;
+  &:active,
+  &.selected {
+    background:#a4b7c1;
+    box-shadow: none;
   }
 }
 
