--- a/web/coinsim/frontend/src/src/app/components/app-cryptodaychart/app-cryptodaychart.component.css
+++ b/web/coinsim/frontend/src/src/app/components/app-cryptodaychart/app-cryptodaychart.component.css
@@ -1,5 +1,5 @@
 .chooser {
-    padding: 10px 10px 0 10px;
+    /*padding: 10px 10px 0 10px;*/
     border-bottom: solid 1px #e4e5e6;
     margin-bottom: 16px;
 }
