--- a/web/coinsim/frontend/src/src/app/components/app-cryptodaychart/app-cryptodaychart.component.css
+++ b/web/coinsim/frontend/src/src/app/components/app-cryptodaychart/app-cryptodaychart.component.css
@@ -61,7 +61,7 @@ i.nselected {
 .price {
     color: #656565;
     font-size: 24px;
-    display: inline-block;
+    /*display: inline-block; */
 }
 
 .percentage {
