--- a/web/coinsim/frontend/src/src/app/views/wallet/wallet-composition/wallet-composition.component.html
+++ b/web/coinsim/frontend/src/src/app/views/wallet/wallet-composition/wallet-composition.component.html
@@ -1,24 +1,30 @@
  <div class="container mb-3 p-2 bg-white">
-      <div class="row p-0 m-0">
-		<div class="col-md-6 p-1 bg-white">
+   <div class="row">
+   		<div class="col-md-6 p-1 bg-white">
           <div class="table-responsive">
             <table class="table table-hover">
               <thead class="thead">
                 <tr>
                   <th>Currency</th>
-                  <th>Amount</th>
-                  <th>Value in US Dollar</th>
+                  <th style="text-align:right;">Amount</th>
+                  <th style="text-align:right;">Value in US Dollar</th>
               </thead>
               <tbody>
                 <tr *ngFor="let balance of balances | async">
                   <td><img *ngIf="balance.currency != 'USD'" src="assets/img/crypto-icons/{{balance.currency | lowercase}}.png" />
                     <span>
                       {{balance.currency == 'USD' ? 'Dollar' : currency_map[balance.currency].name}}
-                    </span> ({{balance.currency }})
+                    </span> <span style="float:right;font-size:12px;">({{balance.currency }})</span>
                   </td>
-                  <td>{{balance.amount}}</td>
-                  <td>{{balance.inUSD}}</td>
-		          </tr>
+                  <td style="text-align:right;">{{balance.amount | number: '1.5-5'}}</td>
+                  <td style="text-align:right;">{{balance.inUSD | number : '1.2-2'}} $</td>
+              </tr>
+              <tr style="border-top:2px solid #c2cfd6;">
+                <td><span style="font-weight:700;">Total Dollar</span></td>
+                <td></td>
+                <td style="text-align:right;"><span style="font-weight:700;color: #463f3f;">{{sum | number : '1.2-2'}} $</span></td>
+                
+              </tr>
               </tbody>
             </table>
           </div>
@@ -26,5 +32,5 @@
         <div class="col-md-6 p-1 bg-white">
           <div class="piechart" [chart]="chart"></div>
         </div>
-	</div>
+  </div>
 </div>
