--- a/web/coinsim/frontend/src/src/app/views/wallet/wallet.component.html
+++ b/web/coinsim/frontend/src/src/app/views/wallet/wallet.component.html
@@ -1,17 +1,15 @@
 <div class="animated fadeIn">
-  <div class="container p-2">
-
-
-
-   <app-wallet-composition *ngIf="currency_map" [currency_map]='currency_map' ></app-wallet-composition>
-
-    <div class="container-fluid mb-3 p-2 bg-white">
-      <div class="row">
-        <div class="col-md-12">
-          <app-balance-history></app-balance-history>
-        </div>
-      </div>
+  <div class="card">
+    <div class="card-body">
+      <app-wallet-composition *ngIf="currency_map" [currency_map]='currency_map' ></app-wallet-composition>
+   
+       <div class="container-fluid mb-3 p-2 bg-white">
+         <div class="row">
+           <div class="col-md-12">
+             <app-balance-history></app-balance-history>
+           </div>
+         </div>
+       </div>
     </div>
-
   </div>
 </div>
